@@ -15,6 +15,10 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+1/8/14
+    - Updates to qps_cplex() and cplex_options() to fix verbose
+      display issues with CPLEX 12.6.
+
 1/3/14
     - Added persistent variable to improve performance of have_fcn().
     - Added support for Knitro v9.0.0, including new 'knitromatlab'
